tests/aws/istio-ingress/overlays/cognito/test_data/expected/~g_v1_configmap_istio-ingress-cognito-parameters-kgf9dmf8t6.yaml
apiVersion: v1
data:
  CognitoAppClientId: ""
  CognitoUserPoolArn: ""
  CognitoUserPoolDomain: ""
  certArn: ""
kind: ConfigMap
metadata:
  name: istio-ingress-cognito-parameters-kgf9dmf8t6
  namespace: istio-system
